@@ -2,6 +2,9 @@
 
 General:
 08May07
+kes  Make lack of Pool directive in Job an ERROR_TERM rather than FATAL
+     so that Bacula doesn't later stumble into a seg fault.
+kes  Use the term Restore Client in the restore Job report.
 kes  Merge patch from Sergey Svishchev <svs@ropnet.ru> that preserves 
      the original job's FileSetId.
 kes  Merge patch from Sergey Svishchev <svs@ropnet.ru> that implements
